--- a/index.html
+++ b/index.html
@@ -13,47 +13,47 @@
 			<div id="main">
 
 				<!-- Header -->
-					<header id="header">
+					<header id="header" style="padding-top: -100px">
 						<h1>Origami Collection</h1>
 						<p>Nicholas Chew</p>
 						<p>Collection of models 2015-2020</p>
 					</header>
 
 				<!-- Thumbnail -->
-					<section id="thumbnails">
+					<section id="thumbnails" style="padding-bottom: 10px">
 						<article>
 							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.png" alt="" /></a>
-							<h2>Phoenix by Satoshi Kamiya</h2>
+							<h2>Phoenix designed by Satoshi Kamiya</h2>
 							<p>One square sheet, 50cm x 50cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Bahamut Dragon by Satoshi Kamiya</h2>
+							<h2>Bahamut Dragon designed by Satoshi Kamiya</h2>
 							<p>One square sheet, 50cm x 50cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Lion by Satoshi Kamiya</h2>
+							<h2>Lion designed by Satoshi Kamiya</h2>
 							<p>One square sheet, 35cm x 35cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Eagle by Jo Nakashima</h2>
+							<h2>Eagle designed by Jo Nakashima</h2>
 							<p>One square sheet, 25cm x 25cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Flahser Hat by Jeremy Shafer</h2>
+							<h2>Flahser Hat designed by Jeremy Shafer</h2>
 							<p>One square sheet, 70cm x 70cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Mosasaurus by Tovi Wen</h2>
+							<h2>Mosasaurus designed by Tovi Wen</h2>
 							<p>One square sheet, 50cm x 50cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Ancient Dragon by Satoshi Kamiya</h2>
+							<h2>Ancient Dragon designed by Satoshi Kamiya</h2>
 							<p>One square sheet, 60cm x 60cm</p>
 						</article>
 						<article>
@@ -63,12 +63,12 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Triangular Interlock by Nicholas Chew</h2>
+							<h2>Triangular Interlock designed by Nicholas Chew</h2>
 							<p>32 strips, 2cm x 6cm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>8 Interlocking Rings by Jeremy Shafer</h2>
+							<h2>8 Interlocking Rings designed by Jeremy Shafer</h2>
 							<p>One square sheet, 75cm x 75cm</p>
 						</article>
 					</section>
