--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 				<!-- Header -->
 					<header id="header" style="padding-top: -100px">
-						<h1>Origami Collection</h1>
-						<p>Nicholas Chew</p>
-						<p>Collection of models 2015-2020</p>
+						<h1>nicky's origami collection</h1>
+						<p>Collection of models 2014-2020</p>
 					</header>
 
 				<!-- Thumbnail -->
